--- a/_instruments/b4f-001/b4f-001.md
+++ b/_instruments/b4f-001/b4f-001.md
@@ -10,6 +10,8 @@ taxonomy:
     model:              "B4"
     variant:            "F"
 construction:
+    status:             "prototype"
+    typology:           "4 string fretless electric bass"
     date:
         start:          "2020-10-01"
         end:            "2021-04-30"
@@ -44,4 +46,11 @@ layout: instrument-1
         
 ---
 
-b4f
+The first approach to the Pragma series, this is a budget-focused prototype of a 4 string fretless electric bass.
+
+A 6mm Cherrywood fretboard with a 12" (300mm) radius on top of a 7 pieces neck composed by Sapele, Hard Maple, and Birch, with multiple pieces of Alder, Pine, and Birch for body, with a bookmatched Iroko top.
+
+The electronics consist of two volumes (one for each soapbar), and a 3.5mm audio out.
+Super lightweight instrument, with a 30mm body thickness, finished in expoxy, and epoxy side dots. 
+
+A headless fixed zinc alloy bridge completes the instrument.
